added files and data

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -45,39 +45,41 @@
             </div>
         </header>
 
-<section>
-    ..
-</section>
 
 
           <!--Content Card with links-->
         <div class="container text-center">
             <div class="row">
               <div class="col">
+                <a href="Parks.html">
                 <div class="card mb-3" style="max-width">
-                    <div class="row g-0">
+                  <div class="row g-0">
                       <div class="col-md-4">
                         <img src="images/Cannon-StoryImg_2.jpg" class="img-fluid rounded-start" alt="...">
-                        <a href="Mountains.html" class="card-link-overlay" target="_blank"></a>
+                      </a>
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
+                          <h4 class="card-title">National Park</h4>
                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                       </div>
                     </div>
                   </div>
               </div>
+
+              <!---Card 2-->
               <div class="col">
+                <a href="Mountains.html">
                 <div class="card mb-3" style="max-width">
                     <div class="row g-0">
                       <div class="col-md-4">
                         <img src="images/Passaconoway-StoryImg.jpg" class="img-fluid rounded-start" alt="...">
+                      </a>
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
+                          <h4 class="card-title">Mountains Information</h4>
                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                       </div>
@@ -85,7 +87,7 @@
                   </div>
               </div>
             </div>
-
+</div>
             
 
             <footer class="bg-light text-center text-white">
