--- a/HTML/Parks.html
+++ b/HTML/Parks.html
@@ -19,7 +19,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="Parks.html">National Parks</a>
@@ -41,19 +41,13 @@
 <div class="container text-center">
   <div class="row">
     <div class="col">
-      <select class="form-select" aria-label="Default select example">
-        <option selected>Open this select menu</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
+      <select class="form-select" id="locationsData" aria-label="Default select example">
+        <option selected></option>
+        
       </select>
     </div>
     <div class="col">
-      <select class="form-select" aria-label="Default select example">
-        <option selected>Open this select menu</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
+      <select class="form-select" id="" aria-label="Default select example">
       </select>
     </div>
   </div>
@@ -102,5 +96,10 @@
     <!-- Copyright -->
   </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="Parks.js"></script>
+    <script src="nationalParksData.js"></script>
+    <script src="parkTypeData.js"></script>
+    <script src="parkTypeData.js"></script>
+    <script src="locationsData.js"></script>
   </body>
 </html>
