--- a/HTML/Parks.html
+++ b/HTML/Parks.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Wildness Whispers National Parks Information</title>
     <script src="https://kit.fontawesome.com/24d68ab19f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
@@ -34,34 +34,43 @@
           <!--NavBar-->
     </header>
 <!---Content-->
-<div class="container">
+<main class="container">
   <h2> Wildness Whispers Park Search</h2>
-  </div>
 <!----Buttons-->
-<div class="container text-center">
-  <div class="row">
-    <div class="col">
-      <select class="form-select" id="locationsData" aria-label="Default select example">
-        <option selected></option>
-        
-      </select>
+<h5>Select options</h5>
+<div class="row">
+  <div class="col">
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+      <label class="form-check-label" for="flexRadioDefault1">
+        Location
+      </label>
     </div>
-    <div class="col">
-      <select class="form-select" id="" aria-label="Default select example">
-      </select>
-    </div>
-  </div>
-
-
-
-  <div class="card" style="background-color: aquamarine;">
-    <div class="card-body">
-      This is some text within a card body.
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+      <label class="form-check-label" for="flexRadioDefault2">
+        Park Type 
+      </label>
     </div>
   </div>
+  <div class="col-5">
+    <img src="images/Eisenhower-StoryImage_2.jpg">
+  </div>
+  <h5>Dropdown</h5>
+  <div class="col">
+    <select class="form-select" aria-label="Default select example">
+      <option selected>Open this select menu</option>
+      <option value="1">One</option>
+      <option value="2">Two</option>
+      <option value="3">Three</option>
+    </select>
+  </div>
+</div>
+<div class="card" style="background-color: darkolivegreen;">
 
+</div>
 
-
+</main>
 <!---Footer-->
   <footer class="bg-light text-center text-white">
     <!-- Grid container -->
