--- a/HTML/Parks.html
+++ b/HTML/Parks.html
@@ -66,8 +66,8 @@
     </select>
   </div>
 </div>
-<div class="card" style="background-color: darkolivegreen;">
-
+<div class="card" style="background-color: darkolivegreen; text-color: white;">
+  <div class="d-print-none">Screen Only (Hide on print only)</div>
 </div>
 
 </main>
