more html basically ready for JS

--- a/HTML/Parks.html
+++ b/HTML/Parks.html
@@ -54,19 +54,16 @@
     </div>
   </div>
   <div class="col-5">
-    <img src="images/Eisenhower-StoryImage_2.jpg">
+    <img src="images/Wildness Whispers transparent.png">
   </div>
   <h5>Dropdown</h5>
   <div class="col">
     <select class="form-select" aria-label="Default select example">
-      <option selected>Open this select menu</option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
+      
     </select>
   </div>
 </div>
-<div class="card" style="background-color: darkolivegreen; text-color: white;">
+<div class="card" style="background-color: darkolivegreen;">
   <div class="d-print-none">Screen Only (Hide on print only)</div>
 </div>
 
