--- a/HTML/Parks.html
+++ b/HTML/Parks.html
@@ -41,30 +41,34 @@
 <div class="row">
   <div class="col">
     <div class="form-check">
-      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="locationSearch">
       <label class="form-check-label" for="flexRadioDefault1">
         Location
       </label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="parkTypeSearch" checked>
       <label class="form-check-label" for="flexRadioDefault2">
         Park Type 
       </label>
     </div>
   </div>
+  <!---Just an image-->
   <div class="col-5">
     <img src="images/Wildness Whispers transparent.png">
   </div>
+  <!-----DropDowns-->
   <h5>Dropdown</h5>
   <div class="col">
-    <select class="form-select" aria-label="Default select example">
-      
+    <select class="form-select" id="locationDropDown">
+    </select>
+
+    <select class="form-select" id="parktypeDropDown">
     </select>
   </div>
 </div>
-<div class="card" style="background-color: darkolivegreen;">
-  <div class="d-print-none">Screen Only (Hide on print only)</div>
+<!----Display Card-->
+<div class="card" style="background-color: darkolivegreen;" id="displayParks">
 </div>
 
 </main>
