--- a/HTML/Parks.html
+++ b/HTML/Parks.html
@@ -37,15 +37,25 @@
 <main class="container">
   <h2> Wildness Whispers Park Search</h2>
 <!----Buttons-->
-<h5>Select options</h5>
-<button type="button" class="btn btn-info" id="searchBtn">Search</button>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadioDefault" id="locationSearchBtn">
+  <label class="form-check-label" for="flexRadioDefault1">
+    Location
+  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadioDefault" id="parkTypeSearchBtn" checked>
+  <label class="form-check-label" for="flexRadioDefault2">
+    Park Type
+  </label>
+</div>
   <!-----DropDowns-->
   <h5>Dropdown</h5>
   <div class="col-5">
-    <select class="form-select" id="locationDropDown">
+    <select class="form-select" id="locationDropdown">
     </select>
 
-    <select class="form-select" id="parkTypeDropDown">
+    <select class="form-select" id="parkTypeDropdown">
     </select>
   </div>
 </div>
@@ -53,8 +63,9 @@
   <div class="col">
     <img src="images/Wildness Whispers transparent.png">
   </div>
-<!----Display Card-->
-<div class="card" style="background-color: darkolivegreen;" id="displayParks">
+<!----Display Container-->
+<div class="container" style="background-color: darkolivegreen;" id="displayParksContainer">
+
 </div>
 
 </main>
@@ -92,10 +103,10 @@
     <!-- Copyright -->
   </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="Parks.js"></script>
     <script src="nationalParksData.js"></script>
     <script src="parkTypeData.js"></script>
     <script src="parkTypeData.js"></script>
     <script src="locationsData.js"></script>
+    <script src="/Scipts/NationalParks.js"></script>
   </body>
 </html>
