--- a/HTML/Parks.html
+++ b/HTML/Parks.html
@@ -107,6 +107,6 @@
     <script src="parkTypeData.js"></script>
     <script src="parkTypeData.js"></script>
     <script src="locationsData.js"></script>
-    <script src="/Scipts/NationalParks.js"></script>
+    <script src="NationalParks.js"></script>
   </body>
 </html>
