--- a/HTML/Mountains.html
+++ b/HTML/Mountains.html
@@ -79,7 +79,7 @@
   <!-- Copyright -->
 </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="Parks.js"></script>
+  <script src="/Scipts/searchNationalParks.js"></script>
   <script src="nationalParksData.js"></script>
   <script src="parkTypeData.js"></script>
   <script src="parkTypeData.js"></script>
