--- a/HTML/Parks.html
+++ b/HTML/Parks.html
@@ -12,10 +12,6 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">ICON</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
@@ -70,13 +66,12 @@
 
 </main>
 <footer>
-  
+   
 </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="nationalParksData.js"></script>
-    <script src="parkTypeData.js"></script>
-    <script src="parkTypeData.js"></script>
-    <script src="locationsData.js"></script>
+    <script src="/Scipts/nationalParksData.js"></script>
+   <script src="/Scipts/parkTypeData.js"></script>
+   <script src="/Scipts/locationsData.js"></script>
     <script src="/Scipts/searchNationalParks.js"></script>
   </body>
 </html>
