location dropdown working

--- a/HTML/Parks.html
+++ b/HTML/Parks.html
@@ -1,77 +1,83 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wildness Whispers National Parks Information</title>
-    <script src="https://kit.fontawesome.com/24d68ab19f.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  </head>
-  <body>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+</head>
+
+<body>
     <!---NavBar-->
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Parks.html">National Parks</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Mountains.html">Mountains Info</a>
-                  </li>
-                </ul>
-              </div>
+                <a class="navbar-brand" href="index.html">
+                  <img src="images/Wildness Whispers transparent.png" width="100px" height="100px">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Parks.html">National Parks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Mountains.html">Mountains Info</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </nav>
-          <!--NavBar-->
+        </nav>
+        <!--NavBar-->
     </header>
-<!---Content-->
-<main class="container">
-  <h2> Wildness Whispers Park Search</h2>
-<!----Buttons-->
-<div class="form-check">
-  <input class="form-check-input" type="radio" name="flexRadioDefault" id="locationSearchBtn">
-  <label class="form-check-label" for="flexRadioDefault1">
-    Location
-  </label>
-</div>
-<div class="form-check">
-  <input class="form-check-input" type="radio" name="flexRadioDefault" id="parkTypeSearchBtn" checked>
-  <label class="form-check-label" for="flexRadioDefault2">
-    Park Type
-  </label>
-</div>
-  <!-----DropDowns-->
-  <h5>Dropdown</h5>
-  <div class="col-5">
-    <select class="form-select" id="locationDropdown">
-    </select>
 
-    <select class="form-select" id="parkTypeDropdown">
-    </select>
-  </div>
-</div>
-  <!---Just an image-->
-  <div class="col">
-    <img src="images/Wildness Whispers transparent.png">
-  </div>
-<!----Display Container-->
-<div class="container" style="background-color: darkolivegreen;" id="displayParksContainer">
+    <!---Content-->
+    <div class="box container-fluid">
+        <h2> Wildness Whispers Park Search</h2>
 
-</div>
+        <!----Buttons-->
 
-</main>
-<footer>
-   
-</footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="locationSearchBtn"> Location
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="parkTypeSearchBtn"> Park Type
+
+        <!-----DropDowns-->
+        <h5>Dropdown</h5>
+
+            <select class="form-select" id="locationDropdown">
+                <option id="defaultLocationOption" value="" selected>Select a location</option>
+            </select>
+
+            <select class="form-select" id="parkTypeDropdown">
+                <option id="defaultParkTypeOption" value="" selected>Select a park type</option>
+            </select>
+    
+  
+        <!----Display Container-->
+        <div class="accordion accordion-flush" id="displayParksContainer"></div>
+
+    </div>
+
+    <footer>
+
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
+    <script src="/Scipts/locationsData.js"></script>
+    <script src="/Scipts/parkTypeData.js"></script>
     <script src="/Scipts/nationalParksData.js"></script>
-   <script src="/Scipts/parkTypeData.js"></script>
-   <script src="/Scipts/locationsData.js"></script>
     <script src="/Scipts/searchNationalParks.js"></script>
-  </body>
+</body>
+
 </html>
