--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wildness Whispers</title>
-    <script src="https://kit.fontawesome.com/24d68ab19f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
@@ -29,12 +28,11 @@
           <!--NavBar-->
           <!---Main Photo-->
           <header class="py-5">
-            <div class="container px-lg-5">
-                <div class="p-4 p-lg-5 bg-light rounded-3 text-center">
+            <div class="container px-lg-5" style="background-color: darkcyan;">
+                <div class="p-4 p-lg-5 bg-light rounded-3 text-center" style="background-color: rgb(0, 139, 51);">
                     <div class="m-4 m-lg-5">
-                        <h1 class="display-5 fw-bold">A warm welcome!</h1>
-                        <p class="fs-4">Bootstrap utility classes are used to create this jumbotron since the old component has been removed from the framework. Why create custom CSS when you can use utilities?</p>
-                        <a class="btn btn-primary btn-lg" href="#!">Call to action</a>
+                        <h1 class="display-5 fw-bold">Welcome to Wildness Whispers</h1>
+                        <p class="fs-4"> </p>
                     </div>
                 </div>
             </div>
@@ -47,7 +45,7 @@
             <div class="row">
               <div class="col">
                 <a href="Parks.html">
-                <div class="card mb-3" style="max-width">
+                <div class="card mb-3">
                   <div class="row g-0">
                       <div class="col-md-4">
                         <img src="images/Cannon-StoryImg_2.jpg" class="img-fluid rounded-start" alt="...">
