--- a/HTML/Mountains.html
+++ b/HTML/Mountains.html
@@ -1,88 +1,93 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wildness Whispers Mountains Page</title>
-    <script src="https://kit.fontawesome.com/24d68ab19f.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  </head>
-  <body>
+    <title>Wildness Whispers National Parks Information</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+</head>
+
+<body>
+    <!---NavBar-->
     <header>
-        <!--NavBar-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">ICON</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Parks.html">National Parks</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Mountains.html">Mountains Info</a>
-                  </li>
-                </ul>
-              </div>
+                <a class="navbar-brand" href="index.html">
+                  <img src="images/Wildness Whispers transparent.png" width="100px" height="100px">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Parks.html">National Parks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Mountains.html">Mountains Info</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </nav>
-          <!--NavBar-->
+        </nav>
+        <!--NavBar-->
     </header>
-    <main>
-      <div class="container text-center">
-        <div class="row row-cols-2">
-          <div class="col">Column</div>
-          <div class="col">Column</div>
-          <div class="col">Column</div>
-          <div class="col">Column</div>
+
+    <!---Content-->
+    <div class="box container-fluid">
+        <h2> Wildness Whispers Park Search</h2>
+
+        <!----Buttons-->
+
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="locationSearchBtn"> Location
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="parkTypeSearchBtn"> Park Type
+
+        <!-----DropDowns-->
+        <h5>Dropdown</h5>
+
+            <select class="form-select" id="locationDropdown">
+                <option id="defaultLocationOption" value="" selected>Select a location</option>
+            </select>
+
+            <select class="form-select" id="parkTypeDropdown">
+                <option id="defaultParkTypeOption" value="" selected>Select a park type</option>
+            </select>
+    
+  
+        <!----Display Container-->
+        <div class="card" style="width: 18rem;">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h3 class="card-title" id="mountainName"></h3>
+            <p class="card-text" id="elevation"></p>
+            <p class="card-text" id="effort"></p>
+            <img id="mountainImage" width="200px" height="200px">
+            <p class="card-text" id="desc"></p>
+            <p class="card-text" id="mountainInfo"></p>
+<p class="card-text"><small class="text-body-secondary" id="difficultyText"> </small></p>
+          </div>
         </div>
-      </div>
-    </main>
+    </div>
 
-<!---Footer-->
-<footer class="bg-light text-center text-white">
-  <!-- Grid container -->
-  <div class="container p-4 pb-0">
-    <!-- Section: Social media -->
-    <section class="mb-4">
-      <!-- Facebook -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998;" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
+    <footer>
+      <div class="footer">&copy;<span id="year"> </span><span> Wildness Whisper. All rights reserved. By Kiana Felder</span></div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
-      <!-- Twitter -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee;" href="#!" role="button"><i class="fab fa-twitter"></i></a>
-
-      <!-- Google -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39;" href="#!" role="button"><i class="fab fa-google"></i></a>
-
-      <!-- Instagram -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac;" href="#!" role="button"><i class="fab fa-instagram"></i></a>
-
-      <!-- Linkedin -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca;" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
-      <!-- Github -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #333333;" href="#!" role="button"><i class="fab fa-github"></i></a>
-    </section>
-    <!-- Section: Social media -->
-  </div>
-
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2020 Copyright:
-    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-  </div>
-  <!-- Copyright -->
-</footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="/Scipts/searchNationalParks.js"></script>
-  <script src="nationalParksData.js"></script>
-  <script src="parkTypeData.js"></script>
-  <script src="parkTypeData.js"></script>
-  <script src="locationsData.js"></script>
+    <script src="/Scipts/mountainData.js"></script>
+    <script src="/Scipts/Mountain.js"></script>
+  
 </body>
+
 </html>
