--- a/HTML/Mountains.html
+++ b/HTML/Mountains.html
@@ -44,24 +44,12 @@
     <!---Content-->
     <div class="box container-fluid">
         <h2> Wildness Whispers Park Search</h2>
-
-        <!----Buttons-->
-
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="locationSearchBtn"> Location
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="parkTypeSearchBtn"> Park Type
-
         <!-----DropDowns-->
         <h5>Dropdown</h5>
 
-            <select class="form-select" id="locationDropdown">
-                <option id="defaultLocationOption" value="" selected>Select a location</option>
+            <select class="form-select" id="mountainDropdown">
+                <option id="defaultMtOption" value="" selected>Mountains</option>
             </select>
-
-            <select class="form-select" id="parkTypeDropdown">
-                <option id="defaultParkTypeOption" value="" selected>Select a park type</option>
-            </select>
-    
-  
         <!----Display Container-->
         <div class="card" style="width: 18rem;">
           <img src="..." class="card-img-top" alt="...">
@@ -76,7 +64,6 @@
           </div>
         </div>
     </div>
-
     <footer>
       <div class="footer">&copy;<span id="year"> </span><span> Wildness Whisper. All rights reserved. By Kiana Felder</span></div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
