--- a/HTML/Parks.html
+++ b/HTML/Parks.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wildness Whispers National Parks Information</title>
-
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                  <img src="images/Wildness Whispers transparent.png" width="100px" height="100px">
+                  <img src="/images/Wildness Whispers.png" width="100px" height="100px">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -43,7 +43,7 @@
 
     <!---Content-->
     <div class="box container-fluid">
-        <h2> Wildness Whispers Park Search</h2>
+        <h2> Wildness Whispers National Park Search</h2>
 
         <!----Buttons-->
 
@@ -66,19 +66,22 @@
         <div class="accordion accordion-flush" id="displayParksContainer"></div>
 
     </div>
+<!--Logo or image-->
+<img src="/images/Wildness Whispers.png">
 
-    <footer>
-      <div class="footer">&copy;<span id="year"> </span><span> Wildness Whisper. All rights reserved. By Kiana Felder</span></div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-
-    <script src="/Scipts/locationsData.js"></script>
-    <script src="/Scipts/parkTypeData.js"></script>
-    <script src="/Scipts/nationalParksData.js"></script>
-    <script src="/Scipts/searchNationalParks.js"></script>
-</body>
-
-</html>
+      <!----Footer-->
+      <footer>
+        <div class="footer">&copy;<span id="year"> </span><span> Wildness Whisper. All rights reserved. By Kiana Felder</span></div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+      </footer>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+          crossorigin="anonymous"></script>
+  
+      <script src="/Scipts/locationsData.js"></script>
+      <script src="/Scipts/parkTypeData.js"></script>
+      <script src="/Scipts/nationalParksData.js"></script>
+      <script src="/Scipts/searchNationalParks.js"></script>
+  </body>
+  
+  </html>
