--- a/HTML/Mountains.html
+++ b/HTML/Mountains.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wildness Whispers National Parks Information</title>
-
+    <title>Wildness Whispers Mountains Page</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -16,7 +15,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                  <img src="images/Wildness Whispers transparent.png" width="100px" height="100px">
+                  <img src="/images/Wildness Whispers.png" width="100px" height="100px">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -43,7 +42,8 @@
 
     <!---Content-->
     <div class="box container-fluid">
-        <h2> Wildness Whispers Park Search</h2>
+        <h2> Wildness Whispers Mountain Search</h2>
+        <img src="/images/wildness whisper banner.png" class="img-fluid" alt="...">
         <!-----DropDowns-->
         <h5>Dropdown</h5>
 
